# pure-python-library-template

./: .buildinfo  .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.md  genindex.html  index.html  library_template.html  modules.html  objects.inv  package.json  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree  library_template.doctree  modules.doctree
.github/workflows/: document.yml  pytest.yml
_sources/: library_template.rst.txt  modules.rst.txt
docs/source/: conf.py  index.rst
tests/: test_init.py
