[tool.poetry]
name = "library_template"
version = "0.2.0"
description = "Library template for Python"
authors = ["natsukium <tm.tomatoes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.8.4"
mypy = "^0.790"
yapf = "^0.30.0"
Sphinx = "^3.3.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
