[tool.poetry]
name = "library_template"
version = "0.2.0"
description = "Library template for Python"
authors = ["natsukium <tm.tomatoes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.8.4"
Sphinx = "^3.3.1"
pytest-cov = "^2.10.1"
black = "^21.6b0"

[tool.pyright]
typeCheckingMode = "strict"
include = ["library_template"]
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
